examples/legacy/invalid_scl/arity_mismatch.scl
type edge(a: usize, b: usize)
rel path(a, b) :- edge(a, b, c), edge(a)
